# gandula

./: .gitignore  .release-please-manifest.json  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: android.yml  deploy.yml  release-please.yml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/rust/: Cargo.toml
android/rust/src/: lib.rs
assets/teams/: flamenguinho_fc.json
assets/teams/fictional/: _mapping.json  almirante_fc.json  amazonia_do_norte.json  associacao_almirante_ac.json  associacao_almirante_fc.json  associacao_cerrado_united.json  associacao_estrela_central.json  associacao_fortalezense_central.json  associacao_garoa_do_norte.json  associacao_imperial_united.json  associacao_ipanema_united.json  associacao_maracana_real.json  associacao_tubarao_sc.json  associacao_tubarao_united.json  associacao_vitoria_regia_ec.json  atletico_madri.json  aurora_junior.json  aurora_sc.json  baviera_fc.json  boquita_junior.json  boquita_juniors.json  botafagonia.json  botafagonia_sc.json  capivara_mirim.json  clube_caatinga_do_norte.json  clube_estrela_ac.json  clube_sport_real.json  coqueiros_imperial.json  curio_united.json  esporte_baviera_ac.json  esporte_boquita_mirim.json  esporte_corcovado_ec.json  esporte_curio_de_goyaz.json  esporte_fortalezense_real.json  esporte_fortalezense_united.json  esporte_juventina_ec.json  esporte_real_sc.json  esporte_serra_sc.json  estrela_ec.json  fenix_mirim.json  (+35 more)
cli/: Cargo.toml
cli/src/: main.rs  persistence.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/domain/: fixture.rs  mod.rs  player.rs  team.rs
core/src/engine/: manager.rs  mod.rs  narration.rs  strength.rs  tick.rs
core/src/rng/: mod.rs
core/src/season/: mod.rs
core/tests/: bench_20_teams.rs  determinism.rs  fixture_correctness.rs  half_split.rs  halftime_subs.rs  projection.rs  season_determinism.rs  season_stronger_wins.rs  stronger_wins.rs  subs.rs  subs_cap.rs
docs/fio-b-fictionalize/: DESIGN_NOTES.md  PROMPT.md  club_names.json  player_names.json
docs/fio-c-rodada/: STATE.md
docs/ui-dos-redesign/: DESIGN_NOTES.md  PROMPT.md  mockup.html
scripts/: build-fictional-teams.sh  build-web.sh  bump-version.sh  setup-dev.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/tests/: snapshot_roundtrip.rs
web/: .gitignore  CHANGELOG.md  index.html  package-lock.json  package.json  repro.mjs  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
web/src/: App.tsx  main.tsx  persistence-migration.test.ts  persistence.ts  styles.css  teams.ts  test-setup.ts  test-utils.tsx  theme.ts  types.ts  vite-env.d.ts
web/src/components/: AsciiBox.tsx  BenchEditor.test.tsx  BenchEditor.tsx  CopaView.tsx  FinancesView.test.tsx  FinancesView.tsx  Footer.tsx  FriendlyMatchView.tsx  GandulaSplash.tsx  HalftimePanel.tsx  LineupEditor.test.tsx  LineupEditor.tsx  MatchReveal.tsx  MatchView.tsx  Objectives.tsx  PrepareView.test.tsx  PrepareView.tsx  RevealRound.tsx  SeasonView.tsx  SupportView.tsx  TacticsForm.tsx  TacticsView.test.tsx  TacticsView.tsx  TransferMarketView.tsx  UserMatchReveal.tsx
web/src/srcl/: Card.tsx  CardDouble.module.css  CardDouble.tsx  css-modules.d.ts
web/src/util/: aging.test.ts  aging.ts  career.test.ts  career.ts  contracts.test.ts  contracts.ts  copa.test.ts  copa.ts  deals.test.ts  divisions.test.ts  (+31 more)
(+16 files in other folders)
