[workspace]
resolver = "2"
members = ["core", "cli", "wasm"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Felipe Debene"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
