[package]
name = "gandula-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gandula"
path = "src/main.rs"

[dependencies]
gandula-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = { workspace = true }
