[package]
name = "gandula-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gandula-core = { path = "../core" }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde_json = { workspace = true }
